crates/store/dl_log_encoding/tests/snapshots/footers_and_manifests__dlr_manifest_blueprint_schema.snap
---
source: crates/store/dl_log_encoding/tests/footers_and_manifests.rs
expression: dlr_manifest_blueprint_sequential.data.format_schema_snapshot()
---
TimePanelBlueprint:fps:has_static_data: non-null Boolean [
    dalaran:archetype: "dalaran.blueprint.archetypes.TimePanelBlueprint"
    dalaran:component: "TimePanelBlueprint:fps"
    dalaran:component_type: "dalaran.blueprint.components.Fps"
    dalaran:index: "dalaran:static"
]
chunk_byte_offset: non-null UInt64
chunk_byte_size: non-null UInt64
chunk_byte_size_uncompressed: non-null UInt64
chunk_entity_path: non-null Utf8
chunk_id: non-null FixedSizeBinary(16)
chunk_is_static: non-null Boolean
chunk_num_rows: non-null UInt64
frame_nr:TimePanelBlueprint:fps:end: Int64 [
    dalaran:archetype: "dalaran.blueprint.archetypes.TimePanelBlueprint"
    dalaran:component: "TimePanelBlueprint:fps"
    dalaran:component_type: "dalaran.blueprint.components.Fps"
    dalaran:index: "frame_nr"
]
frame_nr:TimePanelBlueprint:fps:num_rows: UInt64 [
    dalaran:archetype: "dalaran.blueprint.archetypes.TimePanelBlueprint"
    dalaran:component: "TimePanelBlueprint:fps"
    dalaran:component_type: "dalaran.blueprint.components.Fps"
    dalaran:index: "frame_nr"
]
frame_nr:TimePanelBlueprint:fps:start: Int64 [
    dalaran:archetype: "dalaran.blueprint.archetypes.TimePanelBlueprint"
    dalaran:component: "TimePanelBlueprint:fps"
    dalaran:component_type: "dalaran.blueprint.components.Fps"
    dalaran:index: "frame_nr"
]
frame_nr:end: Int64 [
    dalaran:index: "frame_nr"
]
frame_nr:start: Int64 [
    dalaran:index: "frame_nr"
]
