crates/store/dl_log_encoding/tests/snapshots/footers_and_manifests__rrd_manifest_recording_schema.snap
---
source: crates/store/dl_log_encoding/tests/footers_and_manifests.rs
expression: rrd_manifest_recording_sequential.data.format_schema_snapshot()
---
chunk_byte_offset: non-null UInt64
chunk_byte_size: non-null UInt64
chunk_byte_size_uncompressed: non-null UInt64
chunk_entity_path: non-null Utf8
chunk_id: non-null FixedSizeBinary(16)
chunk_is_static: non-null Boolean
chunk_num_rows: non-null UInt64
elapsed_time:end: Duration(ns) [
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:colors:end: Duration(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:colors:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:colors:start: Duration(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:points:end: Duration(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:points:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "elapsed time"
]
elapsed_time:example_MyPoints:points:start: Duration(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "elapsed time"
]
elapsed_time:start: Duration(ns) [
    rerun:index: "elapsed time"
]
example_MyPoints:colors:has_static_data: non-null Boolean [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "rerun:static"
]
example_MyPoints:labels:has_static_data: non-null Boolean [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:labels"
    rerun:component_type: "example.MyLabel"
    rerun:index: "rerun:static"
]
example_MyPoints:points:has_static_data: non-null Boolean [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "rerun:static"
]
frame_nr:end: Int64 [
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:colors:end: Int64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:colors:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:colors:start: Int64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:points:end: Int64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:points:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "frame_nr"
]
frame_nr:example_MyPoints:points:start: Int64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "frame_nr"
]
frame_nr:start: Int64 [
    rerun:index: "frame_nr"
]
log_time:end: Timestamp(ns) [
    rerun:index: "log_time"
]
log_time:example_MyPoints:colors:end: Timestamp(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "log_time"
]
log_time:example_MyPoints:colors:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "log_time"
]
log_time:example_MyPoints:colors:start: Timestamp(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:index: "log_time"
]
log_time:example_MyPoints:points:end: Timestamp(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "log_time"
]
log_time:example_MyPoints:points:num_rows: UInt64 [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "log_time"
]
log_time:example_MyPoints:points:start: Timestamp(ns) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:index: "log_time"
]
log_time:start: Timestamp(ns) [
    rerun:index: "log_time"
]
