crates/store/dl_log_encoding/tests/snapshots/footers_and_manifests__simple_manifest_batch_native_map_static.snap
---
source: crates/store/dl_log_encoding/tests/footers_and_manifests.rs
expression: "format!(\"{static_map:#?}\")"
---
{
    /my_entity1: {
        "example.MyPoints:colors": chunk_00000000000000010000000000000002,
        "example.MyPoints:labels": chunk_00000000000000010000000000000002,
    },
    /my_entity2: {
        "example.MyPoints:colors": chunk_00000000000000010000000000000003,
        "example.MyPoints:labels": chunk_00000000000000010000000000000003,
        "example.MyPoints:points": chunk_00000000000000010000000000000003,
    },
}
