crates/store/dl_log_encoding/tests/snapshots/footers_and_manifests__simple_manifest_batch_native_map_temporal.snap
---
source: crates/store/dl_log_encoding/tests/footers_and_manifests.rs
expression: "format!(\"{temporal_map:#?}\")"
---
{
    /my_entity1: {
        Timeline {
            name: "elapsed time",
            typ: DurationNs,
        }: {
            "example.MyPoints:colors": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(20 000 000 000),
                        max: TimeInt(30 000 000 000),
                    },
                    num_rows: 2,
                },
            },
            "example.MyPoints:points": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(10 000 000 000),
                        max: TimeInt(40 000 000 000),
                    },
                    num_rows: 3,
                },
            },
        },
        Timeline {
            name: "frame_nr",
            typ: Sequence,
        }: {
            "example.MyPoints:colors": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(20),
                        max: TimeInt(30),
                    },
                    num_rows: 2,
                },
            },
            "example.MyPoints:points": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(10),
                        max: TimeInt(40),
                    },
                    num_rows: 3,
                },
            },
        },
        Timeline {
            name: "log_time",
            typ: TimestampNs,
        }: {
            "example.MyPoints:colors": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(20),
                        max: TimeInt(30),
                    },
                    num_rows: 2,
                },
            },
            "example.MyPoints:points": {
                chunk_00000000000000010000000000000001: RrdManifestTemporalMapEntry {
                    time_range: AbsoluteTimeRange {
                        min: TimeInt(10),
                        max: TimeInt(40),
                    },
                    num_rows: 3,
                },
            },
        },
    },
}
